# SageAttention

sageattention3_blackwell/: README.md  setup.py
sageattention3_blackwell/benchmarks/: block_lambda_smoothing_tops.csv  k_smoothing_cosim_pythia6p9b_l0_512_h8.json
sageattention3_blackwell/reports/: ab_qb16_no_tail_mask_full_b16h4.json  ab_qb8_reference_b16h4.json  bench_alias_smem_16k.json  bench_alias_smem_sageattn4_scaled.json  bench_b4_lambpipe_earlywait_tflops_by_sequence.json  bench_b4_tflops_by_sequence.json  bench_b8_tflops_by_sequence.json  bench_constant_b16_h4_standard_tflops_by_sequence.json  bench_ratio_cell_s16k_b1.json  bench_ratio_cell_s16k_b2.json  bench_ratio_cell_s16k_b32.json  bench_ratio_cell_s16k_b64.json  bench_ratio_cell_s32k_b16.json  bench_ratio_cell_s32k_b32.json  bench_ratio_cell_s32k_b8.json  bench_ratio_cell_s64k_b16.json  bench_ratio_cell_s64k_b2.json  bench_ratio_cell_s64k_b4.json  bench_ratio_cell_s64k_b8.json  bench_ratio_cell_s8k_b1.json  bench_ratio_cell_s8k_b2.json  bench_ratio_cell_s8k_b4.json  bench_ratio_cell_s8k_b8.json  bench_s4_s3_ratio_heatmap_by_batch_seq.json  bench_s4_s3_ratio_heatmap_by_batch_seq_complete.json  bench_s4_s3_ratio_heatmap_by_batch_seq_notes.md  bench_scaled_b64_8k_64k_tflops_by_sequence.json  bench_tflops_by_sequence.json  bench_tflops_by_sequence_h4_b16_qb16_s4.json  bench_tflops_by_sequence_h4_noncausal.json  bench_tflops_by_sequence_h4_qb16_broadcast_noncausal_s4.json  bench_tflops_by_sequence_h4_qb16_twomask_causal.json  bench_tflops_by_sequence_h4_qb8_final.json  per_block_combo_blockmean1.json  query_mean_cosim_models_clinic_alt.json  query_mean_cosim_models_clinic_corrected.json  query_mean_cosim_models_clinic_postrope_bias.json  query_mean_cosim_models_clinic_reference.json  value_slot_experiment_postrope_distribution_blockmean1.json  value_slot_experiment_postrope_qspan.json  (+3 more)
sageattention3_blackwell/reports/aux/: ab_qb16_current_b16h4.json  ab_qb16_no_lamb_correction_b16h4.json  ab_qb16_no_lamb_tma_no_correction_b16h4.json  ab_qb16_no_shuffle_b16h4.json  ab_qb16_no_tail_mask_b16h4.json  bench_b4_h16_noscale_epiclean_16k.json  bench_b4_h16_noscale_epiclean_32k.json  bench_b4_h16_noscale_epiclean_64k.json  bench_b4_h16_noscale_epiclean_8k.json  bench_b4_h16_noscale_epiclean_flashfp16_16k.json  bench_b4_h16_noscale_epiclean_flashfp16_32k.json  bench_b4_h16_noscale_epiclean_flashfp16_64k.json  bench_b4_h16_noscale_epiclean_flashfp16_8k.json  bench_b4_h16_noscale_epiclean_tflops_by_sequence.json  bench_b4_lambpipe_tflops_by_sequence.json  bench_constant_b16_h4_standard_16k.json  bench_constant_b16_h4_standard_32k.json  bench_constant_b16_h4_standard_64k.json  bench_constant_b16_h4_standard_tflops_by_sequence.json  bench_constant_b1_h4_standard_16k.json  bench_constant_b1_h4_standard_32k.json  bench_constant_b1_h4_standard_64k.json  bench_constant_b1_h4_standard_tflops_by_sequence.json  bench_constant_b4_h4_standard_16k.json  bench_constant_b4_h4_standard_32k.json  bench_constant_b4_h4_standard_64k.json  bench_constant_b4_h4_standard_tflops_by_sequence.json  bench_constant_b8_h4_standard_16k.json  bench_constant_b8_h4_standard_32k.json  bench_constant_b8_h4_standard_64k.json  bench_constant_b8_h4_standard_tflops_by_sequence.json  bench_current_vs_full_alias_s4_16k_b16h4.json  bench_current_vs_full_alias_s4_32k_b4h4.json  bench_current_vs_full_alias_s4_64k_b1h4.json  bench_epilogue_simplified_16k_b4.json  bench_full_alias_smem_16k.json  bench_full_alias_smem_sageattn4_scaled.json  bench_grid376_b16_s3_s4.json  bench_llama8b_b16_h32_l16k_100repeats.json  bench_llama8b_b16_h32_l16k_100repeats_noncausal.json  (+81 more)
sageattention3_blackwell/sageattention4/: __init__.py
sageattention3_blackwell/sageattn3/: api.py
sageattention3_blackwell/sageattn3/blackwell/: api.cu  kernel_traits.h  kernel_ws.h  launch.h  mainloop_tma_ws.h  mean_residual_qk.md  named_barrier.h  params.h  softmax_fused.h
sageattention3_blackwell/sageattn3/quantization/: fp4_quantization_4d.cu
sageattention3_blackwell/sageattn4/: __init__.py  api.py
sageattention3_blackwell/sageattn4/blackwell/: CMakeLists.txt  README.md  api.cpp  blockscaled_layout.h  fwd_config.h  fwd_epilogue.cu  fwd_kernel.cu  fwd_mainloop.cu  generate_layout_visualizations.py  generate_specialized_headers.py  mainloop_tma_ws_debug.cu  named_barrier.h  params.h  sageattn4_fwd_hdim128_bm128_bn128_s3_blockmean0.h  sageattn4_fwd_hdim128_bm128_bn128_s3_blockmean0_causal.h  sageattn4_fwd_hdim128_bm128_bn128_s3_blockmean1.h  sageattn4_fwd_hdim128_bm128_bn128_s3_blockmean1_causal.h  shared_storage.h  softmax_fused.h  specialized_codegen.py
sageattention3_blackwell/sageattn4/blackwell/generated_templates/: sageattn4_fwd_specialization.h.in
sageattention3_blackwell/sageattn4/quantization/: fp4_quantization_4d.cu
sageattention3_blackwell/scripts/: bench.py  bench_ratio_grid.py  compare_decode_constraint_variants.py  compare_k_smoothing_cosim.py  compare_lambda_one.py  compare_query_mean_cosim_models.py  compare_sageattn_blackwell_fixtures.py  cross_validate_hf_tl_postrope.py  export_cuda_headers.sh  generate_hf_postrope_qkv_fixture.py  generate_tl_qkv_fixture.py  inspect_accumulator_partition.py  make_clear_question_prompts.py  plot_per_block_combo_barchart.py  plot_per_block_combo_distributions.py  plot_sageattn_blackwell_error_distributions.py  report_lambda_block_mean_cosims.py
sageattention3_blackwell/tests/: test.py  test_mean_residual_qk.py
sageattention3_blackwell/tests/fixtures/: llama3p1_8b_instruct_l16_h15_s128_qkv.pt  llama3p1_8b_instruct_l16_h30_s256_qkv.pt
sageattention3_blackwell/tests/prompts/: clear_question_clinic.txt  clear_question_logistics.txt  clear_question_observatory.txt
